tests/purs/failing/UnsupportedRoleDeclarationTypeClass.purs
-- @shouldFailWith UnsupportedRoleDeclaration
module Main where

class C a
type role C representational
