tests/purs/failing/UnsupportedRoleDeclarationTypeClass.out
Error found:
in module [33mMain[0m
at tests/purs/failing/UnsupportedRoleDeclarationTypeClass.purs:5:1 - 5:29 (line 5, column 1 - line 5, column 29)

  Role declarations are only supported for data types, not for type synonyms nor type classes.


See https://github.com/purescript/documentation/blob/master/errors/UnsupportedRoleDeclaration.md for more information,
or to contribute content related to this error.

